# Triton_OpenPPL_Backend

./: .gitignore  CMakeLists.txt  README.md
cmake/: TritonOnnxRuntimeBackendConfig.cmake.in  TritonOpenPPLBackendConfig.cmake.in
sample/maskrcnn/: config.pbtxt
src/: libtriton_openppl.ldscript  openppl.cc  openppl_utils.cc  openppl_utils.h
